Fix spacing with large text

--- a/data/style.css
+++ b/data/style.css
@@ -3,7 +3,7 @@
   border-radius: 6px;
 }
 
-.song-title {
+.toolbar-text {
   margin-top: -6px;
   margin-bottom: -6px;
   min-height: 12px;
